--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "update-lang-id": "find packages -type f -name \"*.js\" -o -name \"*.jsx\" -o -name \"*.ts\" -o -name \"*.tsx\" -o -name \"*.json\" -o -name \"*.md\" -o -name \"*.html\" | xargs grep -l \"0165\" | xargs sed -i '' 's/0165/0166/g'",
     "build": "npm run -w packages/app build; npm run -w packages/api build",
-    "build-static": "npm run -w packages/api build-lexicon; npm run -w packages/api build-static",
+    "build-static": "npm run -w packages/api build-lexicon; npm run -w packages/api build-spec",
     "dev": "npm run -w packages/api dev",
     "start": "npm run -w packages/api start",
     "lint": "npm run -w packages/api lint; npm run -w packages/app lint",
